feat: wallet authorisation
middleware for new tokens
