# src/router/users.ts
@@ -39,4 +39,8 @@ export default (router: Router): void => {
   router.post('/user/refresh', userController.refresh);
 
   router.post('/user/logout', authMiddleware, userController.logout);
+
+  router.get('/secret', userController.getSecret);
+  router.post('/wallet/auth', userController.walletAuth);
+  router.post('/wallet/refresh', userController.walletRefresh);
 };
